fixed text-align

--- a/css/style.css
+++ b/css/style.css
@@ -51,7 +51,7 @@ html {
 }
 
 a span:hover {
-    box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, .4);
+    box-shadow: 0 3px 6px black;
 }
 
 a span:active {
@@ -78,6 +78,7 @@ a span:active {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    text-align: center;
 }
 
 .content img {
@@ -87,7 +88,6 @@ a span:active {
 /* IL NOSTRO MODELLO DI PUNTA */
 .didascalia {
     font-size: 2em;
-    text-align: center;
 }
 
 .didascalia.yellow {
